--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nightwatch extension commands and assertions for handling Web Components.",
   "main": "index.js",
   "scripts": {
-    "test": "npm t"
+    "test": "node_modules/.bin/nightwatch",
+    "test-debug": "node_modules/.bin/nightwatch --verbose"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/apalaniuk/nightwatch-webcomponents/issues"
   },
-  "homepage": "https://github.com/apalaniuk/nightwatch-webcomponents#readme"
+  "homepage": "https://github.com/apalaniuk/nightwatch-webcomponents#readme",
+  "devDependencies": {
+    "chromedriver": "^2.28.0",
+    "nightwatch": "^0.9.14",
+    "selenium-server-standalone": "^2.53.1"
+  }
 }
